// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLink /> renders correctly \`disabled\` 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg nav-link disabled"
    disabled=""
    href=""
    role="button"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly anchor attributes 1`] = `
<DocumentFragment>
  <a
    aria-label="SourceGraph.com"
    class="btn btn-secondary btn-lg nav-link"
    data-pressed="true"
    data-tooltip="SourceGraph.com"
    href="https://sourcegraph.com"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly btn classes 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg nav-link"
    href="http://example.com"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly empty \`to\` 1`] = `
<DocumentFragment>
  <a
    class="btn btn-secondary btn-lg nav-link"
    href=""
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;
